2005-06-30  Yves Combe  <yves@ycombe.net>

	* add tuxpaint launcher board.
	* add properties python binding.
	* fix board_finished bug when launched directly with -l 

2005-06-27  Bruno coudoin  <bruno.coudoin@free.fr>

	- readded initalisation of REQUIRE_PYTHON variable for the spec file
	- removed all code for the old gcompris_edit

	* configure.in:
	* gcompris-edit.desktop.in:
	* gcompris-edit.png:
	* po/POTFILES.in:
	* po/fr.po:
	* src/gcompris/Makefile.am:
	* src/gcompris/callbacks.c:
	* src/gcompris/callbacks.h:
	* src/gcompris/gcompris-edit.c:
	* src/gcompris/gcompris-edit.h:
	* src/gcompris/interface.c:
	* src/gcompris/interface.h:
	* src/gcompris/support.c:
	* src/gcompris/support.h:

2005-06-27  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/dataset/mrpatate.xml: added missing images from imageid
	* boards/dataset/tuxpaint_pictures.xml: will provide tuxpaint user saved drawings from 
	  gcompris image selector (if any).

2005-06-27  Yves Combe  <yves@ycombe.net>

	* administration module (gcompris -e).

2005-06-22  Yves Combe  <yves@ycombe.net>

	* fix broken Makefile.am
	* untested gcompris_db_save_user fonction

2005-06-22  Yves Combe  <yves@ycombe.net>

	* Completed migration of USE_PROFILS to USE_SQLITE.
	* Now profile system is always compiled in. 
	If SQLITE is not avalaible, profile system is just disabled.

2005-06-20  Yves Combe  <yves@ycombe.net>

	* add africa card in geography
	* fix atof bug in geography

2005-06-16  Yves Combe  <yves@ycombe.net>

	* Preparation of cairo integration (compilation errors)
	* --reread-xml option to force database boards rewrite.
	    Suppress boards if they are no more in the xml list.

2005-06-15  Yves Combe  <yves@ycombe.net>

	* Change billard to football (NTBF suggestion).

2005-06-14  Yves Combe  <yves@ycombe.net>

	* update INSTALL for libtool.
	* fix a segfault with gdate.

2005-06-14  Yves Combe  <yves@ycombe.net>

	* fix missing board_dir initialisation when board is read 
	from db.
