@@ -1,3 +1,7 @@
+2005-06-30  Yves Combe <yves@ycombe.net>
+
+	* fix tuxpaint launcher crash if tuxpaint not found
+
 2005-06-30  Yves Combe  <yves@ycombe.net>
 
 	* add tuxpaint launcher board.
